--- a/contact.css
+++ b/contact.css
@@ -85,7 +85,7 @@ legend{
 
 
 
-@media screen and (max-width:480px) and (min-width:360px){
+@media screen and (max-width:360px){
     *{
         background-color: black;
         color: white;
