--- a/about.css
+++ b/about.css
@@ -87,7 +87,7 @@ legend{
 
 
 
-@media screen and (max-width:480px) and (min-width:360px) {
+@media screen and (max-width:360px) {
     *{
         background-color: black;
         font-size: 10px;
