--- a/portfolio.css
+++ b/portfolio.css
@@ -134,7 +134,7 @@ img{
 
 
 
-@media screen and (max-width:480px) and (min-width:360px) {
+@media screen and (max-width:360px) {
     *{
         background-color: black;
         color: white;
