--- a/contact.css
+++ b/contact.css
@@ -51,7 +51,7 @@ button{
 
 fieldset{
     margin-top: 10%;
-    margin-left: 20%;
+
     border: soild 1px white;
     height: 20%;
     width: 60%;
@@ -81,3 +81,8 @@ legend{
 
 }
 
+@media (max-width:350px) {
+    *{
+        font-size: 10px;
+    }
+}
