--- a/skills.css
+++ b/skills.css
@@ -79,7 +79,7 @@ legend{
 
 }
 
-@media (max-width:480px) {
+@media (max-width:480px) and (min-width:310px){
     fieldset{
         margin: 0%;
     }
