--- a/contact.css
+++ b/contact.css
@@ -83,7 +83,7 @@ legend{
 
 }
 
-@media (max-width:480px) and (min-width:310px){
+@media (max-width:320px){
     fieldset{
         font-size: 10px;
     }
