--- a/portfolio.css
+++ b/portfolio.css
@@ -132,7 +132,7 @@ img{
 
 
 
-@media (max-width:480px) and (min-width:300px){
+@media screen and  (max-width:320px) and (min-width:300px){
     *{
         background-color: black;
         color: white;
