--- a/about.css
+++ b/about.css
@@ -82,7 +82,18 @@ legend{
 
 }
 
-@media (max-width:320px){
+@media screen and (max-device-width:414px),screen and (max-width:414px){
+    fieldset{
+        margin: 4%;
+        width: 80%;
+
+    }
+
+}
+
+
+
+@media screen and (max-device-width:768px),screen and (max-width:768px){
     fieldset{
         margin: 4%;
         width: 80%;
