--- a/contact.css
+++ b/contact.css
@@ -83,7 +83,14 @@ legend{
 
 }
 
-@media screen and (max-width:320px){
+@media screen and (max-device-width:414px),screen and (max-width:414px){
+    fieldset{
+        font-size: 10px;
+    }
+}
+
+
+@media screen and (max-device-width:768px),screen and (max-width:768px){
     fieldset{
         font-size: 10px;
     }
