--- a/about.css
+++ b/about.css
@@ -82,6 +82,23 @@ legend{
 
 }
 
+
+
+@media screen and (max-device-width:320px),screen and (max-width:320px){
+    fieldset{
+        margin: 4%;
+        width: 80%;
+
+    }
+
+}
+
+
+
+
+
+
+
 @media screen and (max-device-width:414px),screen and (max-width:414px){
     fieldset{
         margin: 4%;
