--- a/skills.css
+++ b/skills.css
@@ -79,12 +79,106 @@ legend{
 
 }
 
+
+
+
+
+@media screen and (max-device-width:320px),screen and (max-width:320px)
+{
+    *{
+        background-color: black;
+        color: white;
+        font-size: 10px;
+        margin: 1%;
+        font-family: 'Times New Roman', Times, serif;
+    }
+    
+    
+    
+    
+    
+    
+    #head{
+        margin-left: 10%;
+        display: flex;
+        justify-content: flex-end;
+    
+    
+    }
+    
+    button{
+        border-radius: 5px;
+        display: list-item;
+        justify-content: space-between;
+    }
+    
+    
+    
+    
+    .items:hover{
+        background-color: white;
+        color: black;
+        box-shadow: -0.3ch 0.3ch  -0.3ch 0.3ch  0.5ch whitesmoke;
+    
+    }
+    
+    
+    .items{
+        flex:1;
+        align-items: center;
+        border-radius: 10px;
+        box-shadow: 10px auto;
+        text-align: center;
+        padding: 2px;
+        cursor: pointer;
+    
+    }
+    
+    
+    
+    fieldset{
+        margin: 5%;
+        border: soild 1px white;
+        height: 40%;
+        width: 80%;
+        line-height: 4ch;
+        color: white;
+    
+        padding: 10px auto;
+        border-radius: 20px;
+        box-shadow: -0.3ch -0.3ch 5ch 1ch rgb(128, 128, 128);
+        box-shadow: 0.3ch 0.3ch 5ch 1ch rgb(129, 129, 128);
+        text-align: center;
+        padding: 10px auto;
+    }
+    
+    legend{
+        border:1px solid white   ;
+        border-radius: 8px;
+        box-shadow: -0.3ch -0.3ch 1ch 1ch rgb(128, 128, 128);
+        box-shadow: 0.3ch 0.3ch 1ch 1ch rgb(129, 129, 128);
+    }
+    
+    
+    .footer{
+        text-align: center;
+        padding: 30PX;
+    
+    }
+
+}
+
+
+
+
+
+
 @media screen and (max-device-width:414px),screen and (max-width:414px)
 {
     *{
         background-color: black;
         color: white;
-        font-size: 20px;
+        font-size: 10px;
         margin: 1%;
         font-family: 'Times New Roman', Times, serif;
     }
@@ -169,7 +263,7 @@ legend{
     *{
         background-color: black;
         color: white;
-        font-size: 20px;
+        font-size: 15px;
         margin: 1%;
         font-family: 'Times New Roman', Times, serif;
     }
