--- a/contact.css
+++ b/contact.css
@@ -83,7 +83,14 @@ legend{
 
 }
 
-@media screen and (max-device-width:300px),screen and (max-width:300px){
+
+
+
+
+@media screen and (min-device-width:360px),screen and (min-width:360px) and (orientation:portrait)
+
+
+{
     fieldset{
         font-size: 10px;
     }
