--- a/about.css
+++ b/about.css
@@ -83,8 +83,10 @@ legend{
 }
 
 
+@media screen and (min-device-width:360px),screen and (min-width:360px) and (orientation:portrait)
 
-@media screen and (max-device-width:300px),screen and (max-width:300px){
+
+{
     fieldset{
         margin: 4%;
         width: 80%;
