--- a/home.css
+++ b/home.css
@@ -117,7 +117,9 @@
 
 
 
-@media screen and (max-device-width:300px),screen and (max-width:300px){
+@media screen and (min-device-width:360px),screen and (min-width:360px) and (orientation:portrait)
+
+{
     
     *{
         background-color: black;
