--- a/contact.css
+++ b/contact.css
@@ -91,6 +91,26 @@ legend{
 
 
 {
+    *{
+        background-color: black;
+        color: white;
+        font-size: 10px;
+        font-family: 'Times New Roman', Times, serif;
+        margin: 1%;
+    }
+    
+    body{
+        align-items: center;
+    }
+    
+    
+    
+    #head{
+        margin-left: 10%;
+        display: flex;
+        justify-content: flex-end;
+     
+    }
     fieldset{
         font-size: 10px;
     }
@@ -98,6 +118,27 @@ legend{
 
 
 @media screen and (max-device-width:414px),screen and (max-width:414px){
+
+    *{
+        background-color: black;
+        color: white;
+        font-size: 15px;
+        font-family: 'Times New Roman', Times, serif;
+        margin: 1%;
+    }
+    
+    body{
+        align-items: center;
+    }
+    
+    
+    
+    #head{
+        margin-left: 10%;
+        display: flex;
+        justify-content: flex-end;
+     
+    }
     fieldset{
         font-size: 10px;
     }
