--- a/about.css
+++ b/about.css
@@ -83,7 +83,7 @@ legend{
 }
 
 
-@media screen and (min-device-width:360px),screen and (min-width:360px) and (orientation:portrait)
+@media screen and (max-device-width:360px),screen and (min-width:320px) and (orientation:portrait)
 
 
 { 
