--- a/skills.css
+++ b/skills.css
@@ -83,7 +83,7 @@ legend{
 
 
 
-@media screen and (min-device-width:360px),screen and (min-width:360px) and (orientation:portrait)
+@media screen and (max-device-width:360px),screen and (min-width:320px) and (orientation:portrait)
 {
     *{
         background-color: black;
@@ -263,7 +263,7 @@ legend{
     *{
         background-color: black;
         color: white;
-        font-size: 15px;
+        font-size: 20px;
         margin: 1%;
         font-family: 'Times New Roman', Times, serif;
     }
